--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,63 +1,14 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="./index.js"></script>
-    <script>
-      console.log('loaded')
-      window.addEventListener('load', function () {
-        document.querySelector('.load-post').addEventListener('click', 
-          function loadPost () {
-            const elements = document.forms['demo'].elements
-            const options = {
-              params: {
-                post_id: elements['params.post_id'].value,
-              },
-              urlBase: elements['urlBase'].value,
-              urlOrigin: elements['urlOrigin'].value,
-              container: elements['container'].value
-            }
-            lemmyBlogSpam(options)
-          }
-        )
-      })
-    </script>
+    <script type="module" src="./index.js"></script>
+    <script type="module" src="./demo.js"></script>
   </head>
   <body>
-    <div id="demo-form">
-      <form name="demo">
-        <label>
-          params.post_id:
-          <input
-            name="params.post_id"
-            value="2511773"
-          />
-        </label>
-        <label>
-          urlBase:
-          <input
-            name="urlBase"
-            value="/api/v3"
-          />
-        </label>
-        <label>
-          urlOrigin:
-          <input
-            name="urlOrigin"
-            value="https://lemmy.ml"
-          />
-        </label>
-        <label>
-          container:
-          <input
-            name="container"
-            value="#lemmy-blog-spam"
-          />
-        </label>
-      </form>
-      <div>
-        <span class="load-post">Load Post</span>
-      </div>
-    </div>
-    <div id="lemmy-blog-spam"></div>
+    <lbs-demo></lbs-demo>
+    <lbs-container
+      params-post-id="1307075"
+      url-origin="https://discuss.tchncs.de"
+    ></lbs-container>
   </body>
 </html>
