--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" src="./index.js"></script>
     <script type="module" src="./demo.js"></script>
   </head>
